# home_directory_task

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.txt  conanfile.txt  main  main.cpp
.github/: build.yaml
.github/workflows/: c-cpp.yml
